# nowcast-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  STAGE_3_IMPLEMENTATION.md  pyproject.toml  series_catalog.yaml
.github/workflows/: ci.yml  release.yml
docs/: ADDING_SOURCES.md  IMPLEMENTATION.md
examples/: backtest_bridge.py  bridge_oos_backtest.py  build_benchmark_pit.py  build_vintage_training_dataset.py  demo_pit.py  get_usgdp.py  run_bridge_backtest.py
notebooks/: Untitled.ipynb
nowcast_data/: __init__.py
nowcast_data/benchmark/: __init__.py  manifest.json  manifest.py  pit_builder.py
nowcast_data/features/: __init__.py  recipes.py  transformers.py
nowcast_data/models/: __init__.py  backtest.py  bridge.py  datasets.py  panel.py  target_features.py  target_policy.py  utils.py
nowcast_data/pit/: __init__.py  api.py  exceptions.py
nowcast_data/pit/adapters/: __init__.py  alphaforge.py  alphaforge_layer.py  base.py  boe.py  ecb.py  fred.py  statcan.py  swiss.py
nowcast_data/pit/core/: __init__.py  catalog.py  models.py  vintage_logic.py
nowcast_data/pit/storage/: __init__.py
nowcast_data/time/: __init__.py  nowcast_calendar.py
tests/: __init__.py  conftest.py  test_alphaforge_ingest_toggle.py  test_alphaforge_ref_period.py  test_api.py  test_backtest.py  test_benchmark_manifest_contract.py  test_benchmark_pit_builder_e2e.py  test_bridge_agg_spec_validation.py  test_bridge_nowcaster_ols_smoke.py  test_bridge_nowcaster_smoke.py  test_bridge_offline_label.py  test_bridge_pit_no_leakage.py  test_bridge_real_time_features.py  test_catalog.py  test_coverage_expansion.py  test_daily_predictors.py  test_feature_transformers.py  test_models.py  test_monthly_anchor_validation.py  test_nowcast_calendar.py  test_pit_list_observations_asof.py  test_pure_unit.py  test_target_asof_ref_fallback.py  test_target_features.py  test_target_final_target.py  test_target_observation_stream.py  test_target_policy_edge_cases.py  test_target_policy_latest_available.py  test_target_policy_max_release_rank.py  test_target_policy_next_release.py  test_target_policy_nth_release.py  test_usgdp.py  test_vintage_logic.py  test_vintage_training_dataset.py  test_weekly_predictor_validation.py
