[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nowcast-data"
version = "0.1.0"
description = "Point-in-time macro data library built on alphaforge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steve Ya"}
]
keywords = ["macroeconomics", "point-in-time", "vintage", "data", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "fredapi",
    "scikit-learn>=1.3.0",
    "duckdb>=0.9.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5",
]
alphaforge = [
    "alphaforge @ git+https://github.com/steveya/alphaforge",
]
storage = [
    "pyarrow>=12.0.0",
    "duckdb>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/steveya/nowcast-data"
Repository = "https://github.com/steveya/nowcast-data"

[tool.setuptools]
packages = [
    "nowcast_data",
    "nowcast_data.features",
    "nowcast_data.pit",
    "nowcast_data.pit.adapters",
    "nowcast_data.pit.core",
    "nowcast_data.pit.storage",
    "nowcast_data.models",
    "nowcast_data.time",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["nowcast_data"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["nowcast_data"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
